# zeno_addon_wizard

./: CMakeLists.txt  README.md  build.py  run.py
YourProject/: CMakeLists.txt  CustomNumber.cpp  MyPrimitiveOps.cpp  add.cpp  main.cpp
graphs/: MyPrimitiveOps.zsg  test_graph.zsg
